fix z-index issues for add comment and comment markers

--- a/atom/styles/codestream.less
+++ b/atom/styles/codestream.less
@@ -26,6 +26,10 @@
 	width: 75%;
 }
 
+.codestream-overlay {
+	z-index: 12 !important;
+}
+
 .codestream-highlight .region {
 	// background-color: lighten(@app-background-color, 10%);
 	background-color: @background-color-highlight;
